Update : Error Corrections

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -74,7 +74,7 @@
 									<header>
 										<h3>What Noopur Jhadhav has to say..</h3>
 									</header>
-									<p>Gramisksha”………… it gave me a platform where I myself felt like a playmaker. Presented everything to the children in a way in which I always wanted to learn and enjoy my studies. Before executing the plan I was very much hesitant, but when it began it was like inhaling the first and freshest breeze of my own imaginative world. I handled class 2 students with another mentor Evita Das. We first updated ourselves about what they are being taught and what they KNOW. After that we started our teaching programs which comprised of explanation, demonstrations, activity works etc. I always used to get more enthusiastic on seeing the welcoming faces of children, and their responses kept me energetic during the sessions.
+									<p>Gramisksha , it gave me a platform where I myself felt like a playmaker. Presented everything to the children in a way in which I always wanted to learn and enjoy my studies. Before executing the plan I was very much hesitant, but when it began it was like inhaling the first and freshest breeze of my own imaginative world. I handled class 2 students with another mentor Evita Das. We first updated ourselves about what they are being taught and what they KNOW. After that we started our teaching programs which comprised of explanation, demonstrations, activity works etc. I always used to get more enthusiastic on seeing the welcoming faces of children, and their responses kept me energetic during the sessions.
 
 									   “Gramiksha” itself became my teacher and helped me explore my self too. It made me roobaroo with the conditions in  which students study. It made work and think way above my comfort zone and Voila! I surprised myself. I am and was very proud of my other mentors who were always brimming with new ideas. And now I am eagerly and desperately waiting for our next venture that shall be a  success again !”
 									</p>
@@ -108,7 +108,7 @@ All in all, I can proudly say that Gramiksha is the best thing that has ever hap
 									</header>
 									<p>
 										Gramiksha is an inventiveness that endeavors for a comprehensive society which provides equal opportunity for all by enhancing the quality of education and co-scholastic activities. Our aspiration is to endorse education and culture among the poverty-ridden and ignorant zone in India.
-Gramiksha is a registered non-profit and non-governmental organization that works in the fields of community development, child welfare, education and literature. It operates in India (Gwalior, Indore, Bhopal, Delhi, Bangalore, and Jaipur). It was founded August 30, 2011.
+Gramiksha is a non-governmental organization , registered under MP Society Act, 1973 ,  that works in the fields of community development, child welfare, education and literature. It operates in India (Gwalior, Indore, Bhopal, Delhi, Bangalore, and Jaipur). It was founded on 30th August 2011.
 Our work is to create interest among students for education. We donate books, install medical facilities, make the school’s environment hygienic and also organize activities and workshops. Our team is composed of students and graduates from schools and universities, and quite a lot of young working people. We don’t promise to make the entire India literate (or maybe deep down, we do) and change the circle of education, but we do promise to make a difference in Indian literacy rate and hopefully, it will do wonders for us.  
 
 									</p>
@@ -119,8 +119,8 @@ Our work is to create interest among students for education. We donate books, in
 										</header>
 										<p><ul>
 											<li>•	Empower persons and their family to bring about constructive change</li>
-											<li>•	sponsor the necessity for awareness of the rights of education</li>
-											<li>•	put in to the knowledge base in the course of incessant community intervention  study and citations</li>
+											<li>•	Sponsor the necessity for awareness of the rights of education</li>
+											<li>•	Put in to the knowledge base in the course of incessant community intervention  study and citations</li>
 											<li>•	Reach out to persons in rural and clannish areas and promote education and village contribution</li>
 											<li><img src="ic.jpg"></img></li>
 										</ul>
@@ -156,7 +156,7 @@ Our work is to create interest among students for education. We donate books, in
 											<br></br><b><u>How Can You Help</u></b>
 										</header>
 										<p>
-											Be a volunteer at Gramiksha. If you have time or aptitude, share with us. You do not require any special recommendation or experience to be a volunteer. Our volunteers include school, college students, housewivves, teachers, professionals.
+											Be a volunteer at Gramiksha. If you have time or aptitude, share with us. You do not require any special recommendation or experience to be a volunteer. Our volunteers include school, college students, housewives, teachers, professionals.
 											Make a friend who is underprivileged.- If you know a person in your vicinity, among your servants, friends or relatives, extend your friendship. You can visit them, go out with them would make them feel acknowledged.
 											Donate old books, computers etc that may be useful in a student's life in any form. This could grant employment to the disadvantaged.
 											Sponsor a child’s education
