Update : Error Corrections

--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -117,7 +117,7 @@ If you are unable to become the ‘mentors’ and you don’t have time for fiel
 							</section>
 							<section>
 								<header>
-									<h3> We thank you for your time and consideration , we look forward to whatever support you can provide...</h3>
+									<h3> We thank you for your time and consideration , we look forward to whatever support you can provide.</h3>
 								</header>
 								
 							</section>
