Update : Error Corrections

--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -86,7 +86,7 @@
 																			<br></br><b><u>Jagrukta</u></b>
 
 									<p>
-									Gramiksha’s initiative to bring JAGRUKTA is to create awareness amongst the educated ignorant people through social media (Articles, Paintings, Photographs) by your experiences with and your feelings towards the  children with less or resources at all. We accept as true that Art has an ability to change MINDS.
+									Gramiksha’s initiative to bring JAGRUKTA is to create awareness amongst the educated ignorant people through social media (Articles, Paintings, Photographs) by your experiences and your feelings towards the children. We accept as true that Art has an ability to change MINDS.
 									</p>
 									<section>
 										<header>
