Update : Error Corrections

--- a/join-us.html
+++ b/join-us.html
@@ -187,7 +187,7 @@ It is a recently formed organization and our team is composed of students and gr
 									</li>
 									<li>
 										<h3>Mail</h3>
-										<p><a href="#">gramiksha.jaipur@gmail.com</a></p>
+										<p><a href="#">info.gramiksha@gmail.com</a></p>
 									</li>
 									<li>
 										<h3>Phone</h3>
