--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -69,9 +69,9 @@
 							<!-- Content -->
 								<article class="box post">
 									<a href="#" class="image featured"><img src="images/rsz_io.jpg" alt="" /></a>
-									<header>
-										<h2>Our Projects</h2>
-										<br></br><b><u>Project Udaan</u></b>
+									<header align="center">
+										<h2 align="center">Our Projects</h2>
+										<br></br><b>PROJECT UDAAN</b>
 									</header>
 									<p>
 										Project Udaan is a concept developed from the guidelines given by Madhya Pradesh Education Board. According to Right to Education Act 29, it has been mandatory to evaluate students based on co-scholastic areas and personal qualities. Project Udaan, which translates to uplift to greater heights focuses on promoting extra curricular activities in school and to develop personal and social qualities in students.
@@ -89,8 +89,8 @@
 									Gramiksha’s initiative to bring JAGRUKTA is to create awareness amongst the educated ignorant people through social media (Articles, Paintings, Photographs) by your experiences and your feelings towards the children. We accept as true that Art has an ability to change MINDS.
 									</p>
 									<section>
-										<header>
-											<br></br><b><u>Street Meet</u></b>
+										<header align="center">
+											<br></br><b>STREET MEET</b>
 										</header>
 										<p>
 											Team Gramiksha also works as a street educator. We feel that no child belongs to a street but to a family. Analyzing the situation helps in understanding street children as individuals and the social environment in which they live. This enables our team to identify their problems, set objectives for interventions and to plan services and support. Community has much to offer by the way of resources for the street children. Project sustainability and community development depends upon your ability to build community support.
@@ -99,8 +99,8 @@
 									</section>
 									
 									<section>
-										<header>
-											<br></br><b><u>Swasthya</u></b>
+										<header align="center">
+											<br></br><b>SWASTHYA</b>
 										</header>
 										<p>
 										Immunizations can save a child’s life. Because of progress in medical science, a child can be protected against more diseases than ever before. We understand the fact that some diseases that once injured or killed thousands of children, have been eliminated completely and others are close to extinction– primarily due to safe and effective vaccines. Being a part of the Child welfare and Development Organization, our activities include providing supplementary nutrition, non-formal pre-school education, nutrition & health education, immunization, health check-up and referral services. We work as the bridge between The Anganwadi centers are also used as depots for distribution of medicines and oral rehydration salts and non-vaccinated children.
