--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -83,11 +83,14 @@
 
 </ol>
 													</p>
-																			<br></br><b><u>Jagrukta</u></b>
-
-									<p>
-									Gramiksha’s initiative to bring JAGRUKTA is to create awareness amongst the educated ignorant people through social media (Articles, Paintings, Photographs) by your experiences and your feelings towards the children. We accept as true that Art has an ability to change MINDS.
-									</p>
+									<section>
+										<header align="center">
+											<br></br><b>JAGRUKTA</b>
+										</header>
+										<p>
+Gramiksha’s initiative to bring JAGRUKTA is to create awareness amongst the educated ignorant people through social media (Articles, Paintings, Photographs) by your experiences and your feelings towards the children. We accept as true that Art has an ability to change MINDS.										</p>
+										
+									</section>
 									<section>
 										<header align="center">
 											<br></br><b>STREET MEET</b>
