--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -76,10 +76,10 @@
 									<p>
 										Project Udaan is a concept developed from the guidelines given by Madhya Pradesh Education Board. According to Right to Education Act 29, it has been mandatory to evaluate students based on co-scholastic areas and personal qualities. Project Udaan, which translates to uplift to greater heights focuses on promoting extra curricular activities in school and to develop personal and social qualities in students.
 
-													<br>Our main focus on syllabus is on two things:<br>
+													<br>Our main focus on syllabus is on two things:
 <ul>
-														<li>Co-Scholastic Areas</li>
-														<li>Personal & Social Qualities</li>
+														<li>1.Co-Scholastic Areas</li>
+														<li>2.Personal & Social Qualities</li>
 
 </ul>
 													</p>
