--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -78,7 +78,7 @@
 
 													<br>Our main focus on syllabus is on two things:
 <ul>
-														<li>1.Co-ScholHGastic Areas</li>
+														<li>1.Co-Scholastic Areas</li>
 														<li>2.Personal & Social Qualities</li>
 
 </ul>
