--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -70,7 +70,7 @@
 								<article class="box post">
 									<a href="#" class="image featured"><img src="images/rsz_io.jpg" alt="" /></a>
 									<header align="center">
-										<h2 align="center">Our Projects</h2>
+										<h2 align="center"><u>Our Projects</u></h2>
 										<br></br><b>PROJECT UDAAN</b>
 									</header>
 									<p>
