--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								</div>
 								<div class="4u">
 									<section class="last">
-										<a href="http://youtu.be/MnkwvUCddHY" target="_blank"><i class="icon featured alt2 fa-film"></i></a>
+										<a href="https://www.youtube.com/channel/UCBSJwy4KiPmV9s4Pjk_yJOQ" target="_blank"><i class="icon featured alt2 fa-film"></i></a>
 										<header>
 											<h2>A Short film on Gramiksha</h2>
 										</header>
