--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 								<li><a href="left-sidebar.html">About Us</a></li>
 								<li><a href="right-sidebar.html">Our Projects</a></li>
 								<li><a href="no-sidebar.html">Your Contribution</a></li>
+								<li><a href="join-us.html">Join Us</a></li>
 								<!--<li><a href="no-sidebar.html">No1 Sidebar</a></li>
 								<li><a href="no-sidebar.html">No2 Sidebar</a></li>-->
 							</ul>
