--- a/join-us.html
+++ b/join-us.html
@@ -54,8 +54,8 @@
 								</li>
 								<li><a href="left-sidebar.html">Aboout Us</a></li>
 								<li><a href="right-sidebar.html">Our Projects</a></li>
-								<li class="current"><a href="no-sidebar.html">Your Contribution</a></li>
-								<li><a href="join-us.html">Join Us</a></li>
+								<li><a href="no-sidebar.html">Your Contribution</a></li>
+								<li  class="current"><a href="join-us.html">Join Us</a></li>
 							</ul>
 						</nav>
 				
