--- a/join-us.html
+++ b/join-us.html
@@ -70,7 +70,7 @@
 						<article class="box post">
 							<a href="#" class="image featured"><img src="images/diya.jpg" alt="" /></a>
 							<header>
-								<h1>“Light the lives of people living in the shadow”</h1>
+								<p>“Light the lives of people living in the shadow”</p>
 								<p>Fill in the form below and we'll make sure we get back to you soon..</p>
 							</header>
 							<iframe src="https://docs.google.com/forms/d/1RRb-k0QgEK70tVKdUT3wdRLRIzaJjJ6kaU1Xv2oZ3wQ/viewform?embedded=true" width="1000" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
