--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -54,6 +54,8 @@
 								<li class="current"><a href="left-sidebar.html">About Us</a></li>
 								<li><a href="right-sidebar.html">Our Projects</a></li>
 								<li><a href="no-sidebar.html">Your Contributions</a></li>
+								<li><a href="join-us.html">Join Us</a></li>
+								
 								<!--<li><a href="no-sidebar.html">No1 Sidebar</a></li>
 								<li><a href="no-sidebar.html">No2 Sidebar</a></li>-->
 							</ul>
