--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -54,6 +54,8 @@
 								<li><a href="left-sidebar.html">About Us</a></li>
 								<li class="current"><a href="right-sidebar.html">Our Projects</a></li>
 								<li><a href="no-sidebar.html">Your Contribution</a></li>
+								<li><a href="join-us.html">Join Us</a></li>
+
 							</ul>
 						</nav>
 				
