--- a/contact-us.html
+++ b/contact-us.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Gramiksha : Projects</title>
+		<title>Gramiksha : Contact Us</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
