--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -55,6 +55,7 @@
 								<li><a href="right-sidebar.html">Our Projects</a></li>
 								<li><a href="no-sidebar.html">Your Contributions</a></li>
 								<li><a href="join-us.html">Join Us</a></li>
+								<li><a href="contact-us.html">Contact Us</a></li>
 								
 								<!--<li><a href="no-sidebar.html">No1 Sidebar</a></li>
 								<li><a href="no-sidebar.html">No2 Sidebar</a></li>-->
