--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -56,6 +56,7 @@
 								<li><a href="right-sidebar.html">Our Projects</a></li>
 								<li class="current"><a href="no-sidebar.html">Your Contribution</a></li>
 								<li><a href="join-us.html">Join Us</a></li>
+								<li><a href="contact-us.html">Contact Us</a></li>
 							</ul>
 						</nav>
 				
