--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -55,6 +55,7 @@
 								<li class="current"><a href="right-sidebar.html">Our Projects</a></li>
 								<li><a href="no-sidebar.html">Your Contribution</a></li>
 								<li><a href="join-us.html">Join Us</a></li>
+								<li><a href="contact-us.html">Contact Us</a></li>
 
 							</ul>
 						</nav>
