--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -90,7 +90,7 @@ If you are unable to become the ‘mentors’ and you don’t have time for fiel
 
 								<li>•Deliver the books</li>
 .
-								<li>Contact himansha.singh@gmail.com for further assistance in delivery</li>
+								<li>Contact us at info.gramiksha@gmail.com for further assistance in delivery</li>
 							</ul>
 							</p>
 							<section>
