--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -217,7 +217,7 @@ Our work is to create interest among students for education. We donate books, in
 								<header>
 									<h2>What's this all about?</h2>
 								</header>
-								<a href="#" class="image featured"><img src="images/09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="1.jpg" alt="" /></a>
 								<p>
 									Gramiksha is an NGO, formed by students. We aim to educate people in villages and promote education among the poverty-ridden and ignorant sector in India. We also provide them with books and conduct workshops to make education entertaining. Our work is to create interest among students for education. We donate books, install medical facilities, make the school’s environment hygienic and also organize activities and workshops.
 It is a recently formed organization and our team is composed of students and graduates from schools and universities. We don’t promise to make the entire India literate and change the circle of education, but we do promise to make a difference in Indian literacy rate and hopefully, it will do wonders for us. Its an “Initiative”, we finally decided to take !!!!
