--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>GRAMIKSHA : Home</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="google-site-verification" content="UxQrVIz7ldZQdOOeZb3K_P-ZWrrBbuTZSeCmKTN-ivQ" />
+		<meta name="google-site-verification" content="UxQrVIz7ldZQdOOeZb3K_P-ZWrrBbuTZSeCmKTN-ivQ" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
