Updated Gwalior recruitment drive

--- a/index.html
+++ b/index.html
@@ -289,15 +289,15 @@ The whole...</p>
 						<div class="8u">
 							<section>
 								<header>
-									<h2>Recent Events</h2>
+									<h2>Upcoming Events : 2015</h2>
 								</header>
 								<ul class="dates">
 									<li>
-										<span class="date">Sept<strong>6</strong></span>
-										<h3><a href="#">Jaipur Recruitment Drive</a></h3>
+										<span class="date">Aug<strong>8</strong></span>
+										<h3><a href="#">Gwalior Recruitment Drive</a></h3>
 										<p></p>
 									</li>
-									<li>
+									<!--<li>
 										<span class="date">Sept<strong>2</strong></span>
 										<h3><a href="#">Jaipur Gramiksha Mentor Training Session</a></h3>
 										<p></p>
@@ -316,7 +316,7 @@ The whole...</p>
 										<span class="date">Jun<strong>22</strong></span>
 										<h3><a href="#">Gramiksha National Meet</a></h3>
 										<p></p>
-									</li>
+									</li>-->
 								</ul>
 							</section>
 						</div>
