--- a/join-us.html
+++ b/join-us.html
@@ -52,7 +52,7 @@
 										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Aboout Us</a></li>
+								<li><a href="left-sidebar.html">About Us</a></li>
 								<li><a href="right-sidebar.html">Our Projects</a></li>
 								<li><a href="no-sidebar.html">Your Contribution</a></li>
 								<li  class="current"><a href="join-us.html">Join Us</a></li>
