--- a/events.html
+++ b/events.html
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 		
-<h2>Coming Soon. Page Under Developement</h2>
+<div><h2>Coming Soon. Page Under Developement</h2></div>
 
 		<!-- Footer -->
 			<div id="footer-wrapper">
