--- a/events.html
+++ b/events.html
@@ -64,7 +64,18 @@
 				</div>
 			</div>
 		
-<div><h2>Coming Soon. Page Under Developement</h2></div>
+<!-- Main -->
+			<div id="main-wrapper">
+				<div class="container">
+					<div class="row">
+						<div class="4u">
+						
+
+						</div>
+					</div>
+				</div>
+			</div>
+
 
 		<!-- Footer -->
 			<div id="footer-wrapper">
