--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
 					<div class="row">
 						<div class="4u">
 						
-
+<h2>Page Under Developement. Please Check Back Later!</h2>
 						</div>
 					</div>
 				</div>
