--- a/index.html
+++ b/index.html
@@ -289,20 +289,25 @@ The whole...</p>
 						<div class="8u">
 							<section>
 								<header>
-									<h2>Upcoming Events : 2015</h2>
+									<h2>Upcoming Events : 2016</h2>
 								</header>
 								<ul class="dates">
 									<li>
-										<span class="date">Aug<strong>8</strong></span>
-										<h3><a href="#">Gwalior Recruitment Drive</a></h3>
-										<p></p>
-									</li>
-									<!--<li>
-										<span class="date">Sept<strong>2</strong></span>
-										<h3><a href="#">Jaipur Gramiksha Mentor Training Session</a></h3>
+										<span class="date">July<strong>16</strong></span>
+										<h3><a href="#">Indore Recruitment Drive</a></h3>
 										<p></p>
 									</li>
 									<li>
+										<span class="date">July<strong>23</strong></span>
+										<h3><a href="#">Gwalior Recruitment Drive</a></h3>
+										<p></p>
+									</li>
+									<li>
+										<span class="date">August<strong>7</strong></span>
+										<h3><a href="#">Laxmangarh Recruitment Drive</a></h3>
+										<p></p>
+									</li>
+								<!--	<li>
 										<span class="date">Aug<strong>30</strong></span>
 										<h3><a href="#">Gramiksha celebrates 3rd Birthday</a></h3>
 										<p></p>
@@ -316,7 +321,7 @@ The whole...</p>
 										<span class="date">Jun<strong>22</strong></span>
 										<h3><a href="#">Gramiksha National Meet</a></h3>
 										<p></p>
-									</li>-->
+									</li> -->
 								</ul>
 							</section>
 						</div>
