--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -22,7 +22,7 @@
 	<body class="no-sidebar">
 
 		<!-- Header -->
-			<div id="header-wrapper">
+			<div id="header-wrapper" style="background-color : cyan">
 				<div id="header">
 					
 					<!-- Logo -->
@@ -54,6 +54,8 @@
 								</li>
 								<li><a href="left-sidebar.html">Aboout Us</a></li>
 								<li><a href="right-sidebar.html">Our Projects</a></li>
+																<li><a href="spark.html">SPARK Model</a></li>								
+
 								<li class="current"><a href="no-sidebar.html">Your Contribution</a></li>
 								<li><a href="join-us.html">Join Us</a></li>
 								<li><a href="contact-us.html">Contact Us</a></li>
@@ -128,27 +130,32 @@ If you are unable to become the ‘mentors’ and you don’t have time for fiel
 				</div>
 			</div>
 
-		<!-- Footer -->
+<!-- Footer -->
 			<div id="footer-wrapper">
 				<section id="footer" class="container">
 					<div class="row">
 						<div class="8u">
 							<section>
 								<header>
-									<h2>Recent Events</h2>
+									<h2>Upcoming Events : 2016</h2>
 								</header>
 								<ul class="dates">
 									<li>
-										<span class="date">Sept<strong>6</strong></span>
-										<h3><a href="#">Jaipur Recruitment Drive</a></h3>
+										<span class="date">July<strong>16</strong></span>
+										<h3><a href="#">Indore Recruitment Drive</a></h3>
 										<p></p>
 									</li>
 									<li>
-										<span class="date">Sept<strong>2</strong></span>
-										<h3><a href="#">Jaipur Gramiksha Mentor Training Session</a></h3>
+										<span class="date">July<strong>23</strong></span>
+										<h3><a href="#">Gwalior Recruitment Drive</a></h3>
 										<p></p>
 									</li>
 									<li>
+										<span class="date">August<strong>7</strong></span>
+										<h3><a href="#">Laxmangarh Recruitment Drive</a></h3>
+										<p></p>
+									</li>
+								<!--	<li>
 										<span class="date">Aug<strong>30</strong></span>
 										<h3><a href="#">Gramiksha celebrates 3rd Birthday</a></h3>
 										<p></p>
@@ -162,7 +169,7 @@ If you are unable to become the ‘mentors’ and you don’t have time for fiel
 										<span class="date">Jun<strong>22</strong></span>
 										<h3><a href="#">Gramiksha National Meet</a></h3>
 										<p></p>
-									</li>
+									</li> -->
 								</ul>
 							</section>
 						</div>
@@ -220,8 +227,8 @@ It is a recently formed organization and our team is composed of students and gr
 									<h2>Share , Like and Follow!</h2>
 								</header>
 								<ul class="social">
-									<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
-									<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
+									<li><a class="icon fa-facebook" href="https://www.facebook.com/Gramiksha" target="_blank"><span class="label">Facebook</span></a></li>
+									<li><a class="icon fa-twitter" href="https://twitter.com/GramikshaJaipur" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
 									<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
 									<li><a class="icon fa-google-plus" href="#"><span class="label">Google+</span></a></li>
