--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 								</li>
 								<li><a href="left-sidebar.html">About Us</a></li>
 								<li><a href="right-sidebar.html">Our Projects</a></li>
+																<li><a href="spark.html">SPARK Model</a></li>								
+
 								<li><a href="no-sidebar.html">Your Contribution</a></li>
 								<li><a href="join-us.html">Join Us</a></li>
 								<li><a href="events.html">Events</a></li>
@@ -412,7 +414,7 @@ It is a recently formed organization and our team is composed of students and gr
 							<!-- Copyright -->
 								<div id="copyright">
 									<ul class="links">
-										<li>&copy; Gramiksha. All rights reserved.</li><li>Designed and Developed by <a href="http://about.me/sahilbhalla" target="_blank">Sahil Bhallla</a> under the Creative Commons License</li>
+										<li>&copy; Gramiksha. All rights reserved.</li><li>Designed and Developed by <a href="http://about.me/sahilbhalla" target="_blank">Sahil Bhalla</a> under the Creative Commons License</li>
 									</ul>
 								</div>
 
